pyquest/tests/parsing/valid/test001.ql
// Form with question type boolean
form label {
  "Question?"
    var: boolean
}