pyquest/tests/parsing/invalid/test004.ql
// Form without label
form {
    "Question?"
    var : boolean
}